application-k8s-config/config/application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: application
  name: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: application
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
status: {}
