application-k8s-config/config/application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application
  namespace: default
  labels:
    app: application
spec:
  selector:
    app: application
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
