application-k8s-config/config/application/templates/httproute.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: application
    namespace: default
  spec:
    hostnames:
    - www.watt.es
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw-edge-proxy
    rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: application
        port: 80
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /
kind: List
metadata:
  resourceVersion: ""
